perf(#206): 잘못된 모든 셀을 한번에 에러메시지로 반환하도록 개선 - 행단위로 검사를 하면서 해당 행에 문제가 있으면 오류를 반환했지만, 오류가 있을 경우 리스트에 저장한 뒤 모두 조회를 한 후 한번에 반환하도록 개선했어요.